# ImageProcessing

./: .gitignore  pyproject.toml
Trab1/: intense.py  main.py  requirements.txt  trans.py
Trab2/: cli.py  kernels.py  processes.py  videomaker.py  videomaker_fft.py
Trab3/: Trab3.ipynb  pets.csv  pyproject.toml  report.md
ex/: ex1.py  ex2.py  ex3.py  noise.py
